[package]
name = "nocturne_dtl"
version = "0.1.0"
edition = "2021"
publish = false
description = "Motor Rust de privacidad contable para posiciones DTL agregadas."
license = "MIT"
rust-version = "1.78"

[lib]
name = "nocturne_dtl"
path = "src/lib.rs"

[[bin]]
name = "nocturnedtl"
path = "src/main.rs"

[dependencies]
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
